# PolyAPI

./: .gitignore  404.html  CLA.md  CNAME  README.md  docker-compose.yml  index.html  mkdocs.yml  search.html  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
ARCHITECTURE/: index.html
CLA/: index.html
CONTRACT/: index.html
CONTRIBUTING/: index.html
contract/error-codes/: index.html
contract/json-contract/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: ARCHITECTURE.md  CONTRACT.md  CONTRIBUTING.md  index.md  mkdocs.yml  my-first-module.md
docs/contract/: error-codes.md  json-contract.md
docs/development/: contributing.md  testing.md
docs/gateway/: api.md  configuration.md  overview.md
docs/getting-started/: architecture.md  installation.md  quickstart.md
docs/modules/: creating.md  overview.md  sort.md
gateway/: Dockerfile  config.py  main.py  pyproject.toml
gateway/api/: index.html
gateway/configuration/: index.html
gateway/contracts/: models.py
gateway/overview/: index.html
gateway/router/: routes.py
gateway/schemas/: __init__.py  request.py
gateway/schemas/modules/: __init__.py  sort.py
gateway/tests/: test_api.py
getting-started/architecture/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
modules/creating/: index.html
modules/overview/: index.html
modules/sort/: Dockerfile  go.mod  (+3 more)
my-first-module/: index.html
search/: search_index.json
